# cplib-initializers

./: .clangd  .gersemirc  .gitignore  .gitmodules  CMakeLists.txt  README.md  compile_flags.txt  flake.nix  justfile  platform_compatibility.md
.github/workflows/: ci.yml
include/arbiter/: checker.hpp
include/ccr/: checker.hpp
include/cms/: checker.hpp  interactor.hpp
include/coci/: checker.hpp  interactor.hpp
include/hello_judge/: checker.hpp
include/hustoj/: checker.hpp
include/kattis/: checker.hpp  interactor.hpp
include/lemon/: checker.hpp
include/luogu/: checker_grader_interaction.hpp
include/nowcoder/: checker.hpp
include/qduoj/: checker.hpp
include/spoj/: checker.hpp  interactor.hpp  spoj.h  spoj_interactive.h
include/syzoj/: checker.hpp  interactor.hpp
include/testlib/: checker.hpp  checker_two_step.cpp  interactor.hpp  interactor_two_step.hpp  two_step_interaction_help.md  validator.hpp
tests/: CMakeLists.txt
tests/fixtures/: CMakeLists.txt  checker.cpp.in  fd_launcher.cpp  interactor.cpp.in  redirect_tmp_eval_score.cpp  spoj_checker_api.cpp  validator.cpp
tests/integration/: conftest.py  test_checkers.py  test_interactors.py  test_validator.py
tests/unit/: base64_test.cpp  reporters_test.cpp  sigpipe_test.cpp
